fix whitespace created by new dnr styles

--- a/src/app/resources/App.styl
+++ b/src/app/resources/App.styl
@@ -49,12 +49,12 @@ html, body, .app
 
 #content-wrapper
     position absolute
-    top 125px + 31px
+    top 125px
     bottom 100px
     left 0
     right 0
     @media screen and (max-width: 600px)
-        top 47px
+        top 40px
 
 #content, #content #content-map
     position absolute
